# ChangeLog for ProMA (ProFTPd MySQL Admin)
# Copyright (C) 2002-2003 Stein Magnus Jodal. Distributed under the GPL.
# $Id$

* 2003-08-23 Stein Magnus Jodal <stein.magnus@jodal.no>
  Changed the font sizes and table look a bit.
  Fixed a bug in INSTALL. Thanks to Mark A. Miller <mamiller@ualr.edu>.
  Added the server name to the web page headers. 
  Added a new field to 'users', which made the 'newusers' table obsolete.
  Added code to use this new field, including support for closing accounts.
  Removed code spesific to the 'newusers' table.
  Updated the copyrights to include 2003.
  Added mail notifiers.
  Released version 0.8.

* 2002-09-19 Stein Magnus Jodal <stein.magnus@jodal.no>
  Fixed a bug in pages/main.inc.php. Thanks to Daniel Perez.
  Released version 0.7.3.

* 2002-08-20 Stein Magnus Jodal <stein.magnus@jodal.no>
  Added status messages to the admin page.
  Released version 0.7.2.

* 2002-08-11 Stein Magnus Jodal <stein.magnus@jodal.no>
  Fixed error regarding SQLConnectInfo in the INSTALL file.

* 2002-07-22 Stein Magnus Jodal <stein.magnus@jodal.no>
  Rewrote the installation instructions.
  Released version 0.7.1.

* 2002-07-02 Stein Magnus Jodal <stein.magnus@jodal.no>
  Added number of logins to the 'change'-page.

* 2002-06-21 Stein Magnus Jodal <stein.magnus@jodal.no>
  Started using CVS in the development.

* 2002-04-24 Stein Magnus Jodal <stein.magnus@jodal.no>
  Rewrote 'make admin' and 'remove admin' as a part of the change function.
  Changed the color scheme a bit.
  Changed cookie-format.
  Fixed a bug in the logout procedure.
  Added 'note' field to the users.
  Released version 0.7.

* 2002-04-07 Stein Magnus Jodal <stein.magnus@jodal.no>
  Gave the install instructions a walk-over and fixed some bugs.
  Improved output from the 'accept user' function.
  New function for the admin to change user settings and passwords.
  Moved parts of admin.lib.php to the new file auth.lib.php.

* 2002-03-17 Stein Magnus Jodal <stein.magnus@jodal.no>