@@ -3,6 +3,13 @@
 # $Id$
 
 * 2003-08-23 Stein Magnus Jodal <stein.magnus@jodal.no>
+  Fixed bug in libs/admin.lib.php. Thanks to Ben Lentz
+    <blentz@channing-bete.com>.
+  Added more info about 'config.inc.php' in INSTALL.
+  Changed text and design of pages/change.inc.php.
+  Moved legend to bottom of user list.
+
+* 2003-08-23 Stein Magnus Jodal <stein.magnus@jodal.no>
   Changed the font sizes and table look a bit.
   Fixed a bug in INSTALL. Thanks to Mark A. Miller <mamiller@ualr.edu>.
   Added the server name to the web page headers. 
